<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Receipt Splitter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_load">Load</string>
    <string name="action_new">New</string>
    <string name="action_remove">Remove</string>
    <string name="action_accept">Accept</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="totalPaidTV">Total Paid:</string>
    <string name="euroCurrency">0€</string>
    <string name="nameTV">Name:</string>
    <string name="paidTV">Paid:</string>
    <string name="addPersonButton">Add</string>
    <string name="remPersonButton">Rem</string>
    <string name="submitButton">Submit</string>
    <string name="productNameTV">Name:</string>
    <string name="productCostTV">Cost:</string>
    <string name="unityRB">per unity</string>
    <string name="kgRB">per kG</string>
    <string name="quantityTV">Quantity:</string>
    <string name="checkbox">Name</string>
    <string name="percentageTV">50%</string>
    <string name="nextButton">ADD</string>
    <string name="endButton">END</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="resultTV">Placeholder</string>
    <string name="restartB">Restart</string>
    <string name="units">units</string>
    <string name="fixButton">Fix previous product</string>
    <string name="title_activity_list_products">ListProductsActivity</string>
    <string name="remProdButton">REMOVE</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about0">How to use Receipt Splitter</string>
    <string name="about1">First just place the total cost of the bill, the names of everyone
        involved and the amount each one paid (don\'t forget those who didn\'t pay anything, just let
        it be 0 for the amount paid). There must be at least two people involved. Use the (+) and
        (x) to add and remove name slots respectively. Finish by pressing *check*.</string>
    <string name="about2">Now start inserting all the products bought. For each product place the
        name, cost and for each person select if they want that product (yes to all by default)
        using the checkboxes.</string>
    <string name="about3">If you uncheck someone that person will not pay for that product! </string>
    <string name="about4">Split Bill also has the functionality to set different amounts of some
        product to different people. You can achieve this by using the seekbars (by default it
        splits evenly by everyone).</string>
    <string name="about5">Use this feature if the person (or people) that want less of something
        realize that they will be paying for a little bit of the said product!</string>
    <string name="about6" formatted="false">For example if you divide a product by four people and for one of them
        you drag the seekbar down the percentages will be (31.25% - 31.25% - 31.25% - 6.25%).
        Play around with the feature to get the hang of it.</string>
    <string name="about7">After adding all the products, just press *check* and you can see exactly
        how much each person has to pay or receive from the others. If you click on the (+) sign
        next to each person you can see detailed information about them.</string>
    <string name="about8">Tips:</string>
    <string name="about9"> - To save time, you can group products that everyone wants by the same
        amount in one product, for example, add the cost of (rice, potatoes, vegetables, meat
        and fish) and just call it "food". The goal of the app is to split items  that not everyone
        wants or people want by different amounts.</string>
    <string name="about10"> - If someone wants to buy something for himself check only that person
        in the product page.</string>
    <string name="about11">You can also save the bills for later viewing!!</string>

    <string name="title_activity_contact">ContactActivity</string>
    <string name="action_contact">Contact</string>

    <string name="contact1">Dev contact: heyjack7@gmail.com</string>
    <string name="contact2">Please email me with any kind of feedback (critics, tips, bugs, etc)</string>
    <string name="contact3">You can also support me by clicking the ads =)</string>

</resources>
