<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        app:showAsAction="always"/>

    <item android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_remove"
        android:title="@string/action_remove"
        app:showAsAction="always"/>

    <item android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/action_accept"
        app:showAsAction="always"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_load"
        android:title="@string/action_load"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_contact"
        android:title="@string/action_contact"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
