<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/entry"
    android:padding="5dp"
    android:weightSum="1"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTV"
        android:id="@+id/nameTV"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/nameET"
        android:layout_weight="0.85"
        android:maxLength="17"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paidTV"
        android:id="@+id/paidTV"
        android:textSize="20sp"
        android:layout_marginLeft="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/paidET"
        android:hint="@string/euroCurrency"
        android:layout_weight="0.15"
        android:maxLength="7"/>
</LinearLayout>