<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pt.novais.daniel.splitthebill.AboutActivity">

    <TextView
        android:text="@string/contact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:textSize="20sp" />

    <TextView
        android:text="@string/contact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:textSize="17sp" />

    <TextView
        android:text="@string/contact3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="17sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Watch interstitial ad"
        android:id="@+id/adButton"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:id="@+id/adsLayoutContact"
        android:gravity="bottom"
        android:layout_marginTop="33dp" />


</LinearLayout>
