<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#ffdcdcdc">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:background="#ffdcdcdc">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productNameTV"
            android:id="@+id/productNameTV"
            android:textSize="25sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/productNameET"
            android:layout_weight="0.7"
            android:inputType="text"
            android:maxLength="20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productCostTV"
            android:id="@+id/productCostTV"
            android:textSize="20sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/productCostET"
            android:inputType="numberDecimal"
            android:hint="@string/euroCurrency"
            android:layout_weight="0.3"
            android:maxLength="6"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainLayout"
        android:layout_marginTop="20dp" />


</LinearLayout>

</ScrollView>